syntax = "proto3";

package protocol;

message MessageHeader {

    enum MessageType {
        CONTROL = 0;
        DATA = 1;
    }

    enum Service {
        COMPUTER_VISION = 0;
        MACHINE_LEARNING = 1;
        GEOMETRY_PROCESSING = 2;
        RENDERING = 3;
        HEAD_TRACKING = 4;
        IMAGE_PROVIDING = 5;
    }

    int32 version = 1;
    MessageType type = 2;
    int32 sequenceID = 3;
    int32 payloadLength = 4;
    Service sourceService = 5;
    Service destinationService = 6;
}